feat: 차트 지표 구간 조회 확장